# protot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  configs.yaml  docker-compose.yml  prometheus.yml  sylk.json  test.py
.sylk/: descriptor.pb
.sylk/cache/: save_1.json  save_10.json  save_11.json  save_12.json  save_13.json  save_14.json  save_15.json  save_16.json  save_17.json  save_18.json  save_19.json  save_2.json  save_20.json  save_21.json  save_22.json  save_3.json  save_4.json  save_5.json  save_6.json  save_7.json  save_8.json  save_9.json
docker/: Dockerfile  README.md  docker-compose.yml  prometheus.yml
docker/data/grafana/: grafana.db
docker/data/redis/: dump.rdb
examples/: Cargo.toml  README.md
examples/src/: main.rs
examples/src/single-process/: server.rs
examples/src/task-producer/: client.rs
examples/src/worker/: worker.rs
protos/: README.md
protos/protot/core/: configs.proto  task.proto
protos/protot/metrics/v1/: metrics.proto
protos/protot/scheduler/v1/: scheduler.proto  scheduler_worker.proto
protos/sylklabs/core/: configs.proto  task.proto
protos/sylklabs/scheduler/v1/: scheduler.proto  scheduler_worker.proto
scripts/: generate-code.sh  pre-release.sh  publish.sh
src/: lib.rs  main.rs
src/client/: mod.rs
src/core/: grpc_executor.rs  job.rs  load_balancer.rs  mod.rs  worker.rs  worker_pool.rs
src/data/: data_store.rs  mod.rs  redis_store.rs
src/internal/: mod.rs
src/server/: metrics.rs  mod.rs
src/utils/: configs.rs  error.rs  logger.rs  mod.rs  shared.rs
tests/: json_test.yml  yaml_test.yml
