[package]
name = "protot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
stats = ["hyper", "prometheus"]

[dependencies]
async-stream = "0.2"
env_logger = "0.10.0"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.20"
num_cpus = "1.16.0"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tonic = "0.9.2"
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic-types = "0.9.2"
prometheus = { version = "0.13.0", optional = true }
hyper = {version = "0.14.27", optional = true}
log4rs = "1.2.0"
chrono = "0.4.28"

[build-dependencies]
tonic-build = {version = "0.9", features = ["prost"] }
