[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
name = "protot_examples"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[[bin]]
name = "worker"
path = "src/worker/worker.rs"

[[bin]]
name = "single-process"
path = "src/single-process/server.rs"

[[bin]]
name = "task-producer"
path = "src/task-producer/client.rs"


[dependencies]
async-trait = "0.1.73"
protot = { path = "../" }
tokio = "1.32.0"
tonic = "0.10.0"
