[package]
authors = ["Amit Shmulevitch <amitsh1995@gmail.com>"]
name = "protot_examples"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[[bin]]
name = "worker"
path = "src/worker/worker.rs"

[[bin]]
name = "single-process"
path = "src/single-process/server.rs"

[[bin]]
name = "task-producer"
path = "src/task-producer/client.rs"


[dependencies]
time = "0.2.23"
async-trait = "0.1.73"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf = "3.2.0"
protot = { path = "../" }
tokio = { version = "1.32.0", features = ["full"]}
tonic = "0.10.0"
